Fix: Moved EditBookLike to /api/users
