# src/BookApi.Domain/DTOs/Commands/BookLikeEditCommandDTO.cs
@@ -1,3 +1,3 @@
 namespace BookApi.Domain.DTOs.Commands;
 
-public record BookLikeEditCommandDTO(string UserId, bool IsLiked);
+public record BookLikeEditCommandDTO(bool IsLiked);
